[package]
name = "eth-sparse-mpt"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.3"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_with = "3.11.0"
rustc-hash = "2.0.0"
rayon = "1.10.0"
smallvec = "1.13.2"

# reth
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag="v1.1.2"}
reth-db-api = { git = "https://github.com/paradigmxyz/reth", tag="v1.1.2" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", tag="v1.1.2" }
reth-execution-errors = { git = "https://github.com/paradigmxyz/reth", tag="v1.1.2" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag="v1.1.2" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", tag="v1.1.2" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag="v1.1.2" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag="v1.1.2" }

# alloy
alloy-primitives = { version = "0.8.11", default-features = false, features = ["asm-keccak"] }
alloy-rlp = "0.3.4"
alloy-trie = { version = "0.7.3", default-features = false }
alloy-rpc-types = "0.6.4"
alloy-rpc-types-eth = "0.6.4"
alloy-json-rpc = "0.6.4"



# test only dependencies but included here to be accessible from benches/
hash-db = "0.15.2"
triehash = "0.8.4"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
eyre = "0.6.12"
rand = { version = "0.8.5", features = ["small_rng"] }
proptest = "1.5.0"

[[bench]]
name = "trie_insert_bench"
harness = false

[[bench]]
name = "trie_nodes_benches"
harness = false

